2002-04-01  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=77203
	* gnome-settings-accessibility-keyboard.c (set_gconf_from_server) : be
	  more anal about server failure.
	(set_server_from_gconf) : ditto.

2002-03-30  Jody Goldberg <jody@gnome.org>

	* gnome-settings-xsettings.c (translations) : reorder to match gdk.
	  This simplifies maintenance.

Tue Apr  9 11:58:10 2002  Jonathan Blandford  <jrb@gnome.org>

	* Makefile.am: Add commented out disk support until I finish the code.

2002-04-04  jacob berkman  <jacob@ximian.com>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf):
	prefer gdk_flush() to XFlush() (fixes bug #77208)

2002-03-29  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : get really anal about
	  potential X errors.
	(set_gconf_from_server) : ditto.

2002-03-29  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  Add a gdk_error_trap just in case.

	* gnome-settings-keyboard.c (apply_settings) : don't init things to
	  bogus values unless it is ncessary.  Add a gdk_error_trap around the
	  X settings to avoid causing the server to exit if something goes
	  wrong.  Be sure to flush before we pop the handler.

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  fix spelling error in schema.

	* gnome-settings-font.c (load_cursor) : add missing NULL terminator.

	* gnome-settings-keyboard.c (apply_settings) : click volume is an
	  integer from 0..100, schema is an int too.  Remove float and double
	  and add some bounds checking.

	* gnome-settings-accessibility-keyboard.c : make the debug spew optional
	(set_server_from_gconf) : typo that only applied settings when we
	  shouldn't.
	(set_server_from_gconf) : set the mouse key accel flag when mk is
	  enabled so that we can actually set the accel parms.  How did this
	  work in X11R6 ?