@@ -1,3 +1,12 @@
+2002-04-11  Jody Goldberg <jody@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) : be
+	  even more anal.
+
+2002-04-10  Jody Goldberg <jody@gnome.org>
+
+	* Makefile.am (gnome_settings_daemon_LDADD) : remove XF86MISC_LIBS
+
 2002-04-01  Jody Goldberg <jody@gnome.org>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=77203
